--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "4.2.*",
         "doctrine/dbal": "2.3.*",
         "barryvdh/laravel-ide-helper": "1.11.*",
-        "stolz/assets": "dev-master"
+        "stolz/assets": "dev-master",
+        "way/generators": "~2.0"
 	},
 	"autoload": {
 		"classmap": [
