--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 			"app/commands",
 			"app/controllers",
 			"app/models",
+            "app/lib",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
