--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,17 +1,17 @@
-<IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
-        Options -MultiViews
-    </IfModule>
+<IfModule mod_rewrite.c> 
+    Options -MultiViews 
+    RewriteEngine On 
 
-    RewriteEngine On
 
-    # Redirect Trailing Slashes...
-    RewriteRule ^(.*)/$ /$1 [L,R=301]
-
-    # Handle Front Controller...
-    RewriteEngine On
-    RewriteBase /
-    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^public/(.*)$ /$1 [L,NC,R]
+ 
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /index.php [L]
+    RewriteCond %{REQUEST_FILENAME} !-f 
+    RewriteRule ^ index.php [L] 
+      
+      
+ 
+#    RewriteEngine On 
+#    RewriteCond %{SERVER_PORT} 80 
+#    RewriteRule ^(.*)$ https://roster.qk.com.au/$1 [R,L] 
 </IfModule>
