--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-ide-helper": "1.11.*",
         "stolz/assets": "0.0.9",
         "way/generators": "~2.0",
-        "barryvdh/laravel-snappy": "0.1.x"
+        "barryvdh/laravel-snappy": "0.1.x",
+        "intervention/image": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
